golden/error/runtime_not_fn_2.test
let person = { name = "Deckard"; };
person.name()

# output:
 --> stdin:2:0
  |
2 | person.name()
  | ^~~~~~~~~~~
Error: This is not a function, it cannot be called.
